# sharaga-telebot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  db.sh  docker-compose.yaml  init.sh  pyproject.toml  setup.sh
app/: Dockerfile  __main__.py  config.py  db.sql  db_model.py  entrypoint.sh  main.py  requirements.txt  settings.py  templates.py
app/core/: __init__.py  logger.py  settings.py  templates.py
app/handlers/: __init__.py  base.py  bot.py  bot_commands.py  commands.py  contacts.py  help.py  links.py  mems.py  response.py  schedule.py  start.py  today.py  today_class.py  week_lessons.py
app/handlers/command/: base.py  info.py  schedule.py  user.py
app/handlers/message/: messages.py
app/services/: db_days.py  db_lecturers.py  db_phrases.py  db_users.py  mydatetime.py  phrases.py  schedule_reader.py
app/src/: days.py  db_days.py  db_lecturers.py  db_phrases.py  db_users.py  lecturers.py  mydatetime.py  phrases.py  schedule_reader.py  users.py
app/templates/: champions.j2  commands.j2  contacts.j2  help.j2  links.j2  mqu.j2  next_week_vacations.j2  recipe.j2  schedule.j2  single.j2  single_vacation.j2  start.j2  today_class.j2  today_vacation.j2  tomorrow_vacation.j2  user_of_day.j2  vacations.j2  version.j2  week_lessons.j2
